--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html lang="pt-BR">
 
+Guilherme Borges 2D 21.08.24
+
 <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
